@@ -6,7 +6,7 @@ muzzle {
   pass {
     group.set("org.springframework.batch")
     module.set("spring-batch-core")
-    versions.set("[3.0.0.RELEASE,)")
+    versions.set("[3.0.0.RELEASE,5)")
     assertInverse.set(true)
   }
 }
@@ -17,6 +17,9 @@ dependencies {
   testImplementation("javax.inject:javax.inject:1")
   // SimpleAsyncTaskExecutor context propagation
   testInstrumentation(project(":instrumentation:spring:spring-core-2.0:javaagent"))
+
+  // spring batch 5.0 uses spring framework 6.0
+  latestDepTestLibrary("org.springframework.batch:spring-batch-core:4.+")
 }
 
 tasks {
@@ -53,5 +56,13 @@ tasks {
   withType<Test>().configureEach {
     systemProperty("testLatestDeps", findProperty("testLatestDeps"))
     jvmArgs("-Dotel.instrumentation.spring-batch.enabled=true")
+    // TODO run tests both with and without experimental span attributes
+    jvmArgs("-Dotel.instrumentation.spring-batch.experimental-span-attributes=true")
   }
+}
+
+tasks.withType<Test>().configureEach {
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
 }
